Bug 57371 - [PATCH]Since 3.8 it's impossible to change MAC address (rt2800pci)
Summary: [PATCH]Since 3.8 it's impossible to change MAC address (rt2800pci)
Status: CLOSED CODE_FIX
Alias: None
Product: Networking
Classification: Unclassified
Component: Wireless (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: networking_wireless@kernel-bugs.osdl.org
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-05-01 13:29 UTC by whatever
Modified: 2014-12-12 14:56 UTC (History)
6 users (show)

See Also:
Kernel Version: 3.8.10
Subsystem:
Regression: Yes
Bisected commit-id:


Attachments
mac80211 patch (2.08 KB, patch)
2013-05-21 09:06 UTC, Helmut Schaa
Details | Diff

Description whatever 2013-05-01 13:29:21 UTC
0a:00.0 Network controller: Ralink corp. RT2790 Wireless 802.11n 1T/2R PCIe

First bad commit is 403e16731ffddc097eae89f53f9a7b0f0c9769c4

Before (55cb079, da29d2a):
ifconfig wlp10s0 hw ether XX:XX:XX:XX:XX:XX
# no error reported, mac address changes

After (403e167):
ifconfig wlp10s0 hw ether XX:XX:XX:XX:XX:XX
SIOCSIFHWADDR: Invalid argument
# mac address doesn't change
Comment 1 Stanislaw Gruszka 2013-05-18 12:30:39 UTC
The change was introduced by below commit and was intended:

commit 478622e81c735ecd83d45ee6be3fd45d500aaa3b
Author: Helmut Schaa <helmut.schaa@googlemail.com>
Date:   Tue Nov 27 18:23:06 2012 +0100

    mac80211: reject setting masked mac addresses

But, I'm not sure if we should disallow user to change MAC address (on station mode ?).
Comment 2 Helmut Schaa 2013-05-21 09:06:50 UTC
Created attachment 102151 [details]
mac80211 patch

Could you please check if the attached patch works for you?
Thanks.
Comment 3 whatever 2013-05-21 09:25:04 UTC
(In reply to comment #2)
> Created an attachment (id=102151) [details]
> mac80211 patch
> 
> Could you please check if the attached patch works for you?
> Thanks.

It does. Thanks.
Comment 4 Stanislaw Gruszka 2014-12-12 14:56:18 UTC
Fixed by:

commit ac20976dcaeea3e77e40e9aac8f3799d2a22ea2b
Author: Helmut Schaa <helmut.schaa@googlemail.com>
Date:   Mon May 27 10:43:09 2013 +0200

    mac80211: Allow single vif mac address change with addr_mask

Note You need to log in before you can comment on or make changes to this bug.